--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "typescript": "^4.1.6",
     "uuid": "^8.3.2"
   },
@@ -45,5 +46,8 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4"
+  },
+  "jest": {
+    "resetMocks": true
   }
 }
